--- a/main.html
+++ b/main.html
@@ -7,13 +7,13 @@
 
   <body>
     <!-- the entire body must be written by student -->
-    <form onsubmit="return false">
+    <form >
       <input type="text" id="text" placeholder="Text" />
       <input type="number" id="delay" placeholder="Delay" />
-      <button type="button" id="btn">Submit</button>
+      <button onclick=getOutput() type="button" id="btn">Submit</button>
     </form>
 
-    <div id="output"></div>
+    <div  id="output"></div>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
