--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
 
   <body>
     <!-- the entire body must be written by student -->
-    <form >
+    <form onsubmit = "return false" >
       <input type="text" id="text" placeholder="Text" />
       <input type="number" id="delay" placeholder="Delay" />
-      <button onclick=getOutput() type="button" id="btn">Submit</button>
+      <button  type="button" id="btn">Submit</button>
     </form>
 
     <div  id="output"></div>
